--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-storage
 bootstrap/cache
 
 /.idea
@@ -21,6 +20,11 @@ public_html/storage
 public_html/hot
 
 storage/*.key
+
+storage/app/*
+storage/framework/*
+storage/logs/*
+
 /.vagrant
 /public/plugins/
 /composer.lock
